// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemCard api should NOT call handleClick 1`] = `
<Connect(OperatingSystemCard)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <OperatingSystemCard
    detailLoaded={true}
    dispatch={[Function]}
    handleClick={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    systemInfo={
      Object {
        "architecture": "test-arch",
        "bootTime": "test-boot",
        "kernelModules": Array [],
        "kernelRelease": "test-kernel",
        "release": "test-release",
      }
    }
  >
    <LoadingCard
      isLoading={false}
      items={
        Array [
          Object {
            "title": "Release",
            "value": "test-release",
          },
          Object {
            "title": "Kernel release",
            "value": "test-kernel",
          },
          Object {
            "title": "Architecture",
            "value": "test-arch",
          },
          Object {
            "title": "Last boot time",
            "value": "Invalid Date",
          },
          Object {
            "onClick": [Function],
            "target": "kernel_modules",
            "title": "Kernel modules",
            "value": "0 modules",
          },
        ]
      }
      title="Operating System"
    >
      <Stack
        className=""
        component="div"
        gutter="md"
      >
        <div
          className="pf-l-stack pf-m-gutter"
        >
          <StackItem
            className=""
            isFilled={false}
          >
            <div
              className="pf-l-stack__item"
            >
              <TextContent>
                <div
                  className="pf-c-content"
                >
                  <Text
                    component="h1"
                  >
                    <h1
                      className=""
                      data-pf-content={true}
                    >
                      Operating System
                    </h1>
                  </Text>
                </div>
              </TextContent>
            </div>
          </StackItem>
          <StackItem
            className=""
            isFilled={true}
          >
            <div
              className="pf-l-stack__item pf-m-fill"
            >
              <TextContent>
                <div
                  className="pf-c-content"
                >
                  <TextList
                    component="dl"
                  >
                    <dl
                      className=""
                      data-pf-content={true}
                    >
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Release
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          test-release
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Kernel release
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          test-kernel
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Architecture
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          test-arch
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Last boot time
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          Invalid Date
                        </dd>
                      </TextListItem>
                      <TextListItem
                        component="dt"
                      >
                        <dt
                          className=""
                          data-pf-content={true}
                        >
                          Kernel modules
                        </dt>
                      </TextListItem>
                      <TextListItem
                        component="dd"
                      >
                        <dd
                          className=""
                          data-pf-content={true}
                        >
                          <Clickable
                            item={
                              Object {
                                "onClick": [Function],
                                "target": "kernel_modules",
                                "title": "Kernel modules",
                                "value": "0 modules",
                              }
                            }
                          >
                            <a
                              href="http://localhost:5000//kernel_modules"
                              onClick={[Function]}
                            >
                              0 modules
                            </a>
                          </Clickable>
                        </dd>
                      </TextListItem>
                    </dl>
                  </TextList>
                </div>
              </TextContent>
            </div>
          </StackItem>
        </div>
      </Stack>
    </LoadingCard>
  </OperatingSystemCard>
</Connect(OperatingSystemCard)>
`;

exports[`OperatingSystemCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Operating System
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Operating System
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Invalid Date
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//kernel_modules"
          >
            0 modules
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render enabled/disabled 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-pf-content="true"
      >
        Operating System
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Invalid Date
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//kernel_modules"
          >
            0 modules
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
